@startuml

title __UTIL's Class Diagram__\n

  package smith.util {
    class TextPrompt {
        - component : JTextComponent
        - document : Document
        - showPromptOnce : boolean
        - focusLost : int
        + TextPrompt()
        + TextPrompt()
        + changeAlpha()
        + changeAlpha()
        + changeStyle()
        + getShow()
        + setShow()
        + getShowPromptOnce()
        + setShowPromptOnce()
        - checkForPrompt()
        + focusGained()
        + focusLost()
        + insertUpdate()
        + removeUpdate()
        + changedUpdate()
    }
  }
  

  package smith.util {
    enum Show {
      ALWAYS
      FOCUS_GAINED
      FOCUS_LOST
    }
  }
  

  TextPrompt -up-|> FocusListener
  TextPrompt -up-|> DocumentListener
  TextPrompt -up-|> JLabel
  TextPrompt o-- Show : show
  TextPrompt +-down- Show
  AccessibleJLabel -up-|> AccessibleText
  AccessibleJLabel -up-|> AccessibleExtendedComponent
  AccessibleJLabel -up-|> AccessibleJComponent
  AccessibleJLabel +-down- LabelKeyBinding
  LabelKeyBinding -up-|> AccessibleKeyBinding
  AccessibleFocusHandler -up-|> FocusListener
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  ReadObjectCallback -up-|> ObjectInputValidation
  AccessibleJComponent -up-|> AccessibleExtendedComponent
  AccessibleJComponent -up-|> AccessibleAWTContainer
  AccessibleJComponent +-down- AccessibleFocusHandler
  AccessibleJComponent +-down- AccessibleContainerHandler
  AccessibleFocusHandler -up-|> FocusListener
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  KeyboardState -up-|> Serializable
  ActionStandin -up-|> Action
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
